# intelligent-synthesizer-ai

./: .gitignore  README.md  agents.py  env.example  main.py  pyproject.toml
intelligent_agents/: __init__.py  agent.py  decorators.py  deep_research_agent.py  function_tools.py  orchestrator.py  output_guardrails_agent.py  query_planner_agent.py  runner.py  synthesis_agent.py  web_search_tool.py  web_searcher_agent.py
models/: research_models.py
